--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3"
