--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
