--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.15.0",
+    "react-share-social": "^0.1.55",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
